--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "ComfyUI_Preview_Selector"
-description = ""
-version = "1.0.0"
+name = "Preview_Selector"
+description = "A floating dialog-based image preview and selection system for ComfyUI."
+version = "1.1.0"
 license = {file = "LICENSE"}
 
 [project.urls]
@@ -10,5 +10,5 @@ Repository = "https://github.com/NyaFuP/ComfyUI_Preview_Selector"
 
 [tool.comfy]
 PublisherId = "nyafu"
-DisplayName = "ComfyUI_Preview_Selector"
+DisplayName = "NF Preview Selector"
 Icon = ""
